Prevent phone numbers from wrapping

--- a/src/applications/personalization/profile360/sass/profile-360.scss
+++ b/src/applications/personalization/profile360/sass/profile-360.scss
@@ -70,3 +70,7 @@ input.usa-only-phone {
     margin: 0;
   }
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
